# xos

board/licheepi/: 0001-uboot-v202107.patch  boot.cmd  genimage-nand.cfg  genimage-nor.cfg  genimage-sdcard.cfg  genimage.cfg  licheepi_zero_defconfig  linux.defconfig  readme.txt  uboot.config  uboot.defconfig
configs/: csky_gx6605s_defconfig  friendlyarm_nanopi_neo_defconfig  hi3516ev300_defconfig  licheepi_zero_defconfig  orangepi_pc2_defconfig  prince_card_defconfig  prince_card_hx8347_defconfig  prince_card_moto_defconfig  prince_lidar_defconfig  rock_pi_s_defconfig  sipeed_lichee_nano_remote_defconfig  widora_mangopi_t113_s3_defconfig
linux/: linux.mk
package/: Config.in
package/busybox/: inittab
package/dnsmasq/: S80dnsmasq  dnsmasq.conf  dnsmasq.mk
package/factory/: Config.in  factory.mk
package/factory/src/: CMakeLists.txt  Makefile  main.cc
package/factory/src/arch/drivers/: ec20.cpp  led.cpp  navuart.cpp  spi.cpp  spi.h  uart.cpp  usb.cpp  version.cpp  version.h  wifi.cpp  wifi.h
package/factory/src/arch/imu/: mpu6050.cpp
package/factory/src/cmake/: build_for_rk3308.cmake
package/factory/src/fileutils/decompress/: InflatingStream.h  tar.cpp
package/factory/src/fileutils/inotify/: xinotify.cc
package/factory/src/kmod/: Makefile  am335x_mac.c
package/factory/src/multiplexing/iocp/: IocpAccept.cpp  IocpAccept.h
package/factory/src/ntp_client/: ntpc.hh
package/factory/src/protobuf/: README.md  cxx.proto  protobuf_test.hh
package/factory/src/socket/: CMakeLists.txt
package/factory/src/socket/icmp/: icmp.cc
package/factory/src/socket/net/: net_interface.hh
package/factory/src/socket/netlink/: netlink.cc  netlink_kernel.c
package/factory/src/system/signal/: CMakeLists.txt  signal_handle.cc  signal_handle.h
package/factory/src/system/timefd/: CMakeLists.txt  timefd.cc
package/factory/src/system/user/: get_user.cpp  get_user.h
package/factory/src/template/: template.cc
package/factory/src/test/: uds_client.cc
package/factory/src/wifi/: wifi_interface.cc  wifi_interface.hh
package/factory/src/wifi/iw-tiny/: iw.c
package/factory/src/wifi/libnl-tiny/include/netlink/: msg.h
package/fakeroot/: 0005-fix-stat_ver.patch
package/fb2png/: Config.in  fb2png.mk
package/fbi-improved/: Config.in  fbi-improved.hash
package/ffmpeg/: ffmpeg.mk
package/idevicerestore/: idevicerestore.hash  idevicerestore.mk
package/klipper/: Config.in  klipper.mk
package/libdjvulibre/: libdjvulibre.mk
package/libimobiledevice/: Config.in  libimobiledevice.mk
package/libirecovery/: Config.in  libirecovery.mk
package/libusbmuxd/: Config.in
package/myjpeg/: myjpeg.mk
package/myopencv/: Config.in  myopencv.mk
package/myqtdemo/: Config.in  myqtdemo.mk
package/nginx/: S50nginx  nginx.conf  nginx.mk
package/pongoos/: Config.in  pongoos.mk
package/prince/: Config.in  prince.mk
package/prince/factory/src/protobuf/: CMakeLists.txt  test.cc
package/prince/factory/src/wifi/: CMakeLists.txt
package/prince/factory/src/wifi/iw-tiny/: version.c
package/python-tornado/: 0001-update-async-create_task.patch
(+364 files in other folders)
